Bug 443564 - screenshot preview is too big
Summary: screenshot preview is too big
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 21.08.1
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-10 18:26 UTC by Anton A.
Modified: 2021-10-25 19:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12
Sentry Crash Report:


Attachments
reproduction of the bug (3.48 MB, video/x-matroska)
2021-10-10 18:26 UTC, Anton A.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anton A. 2021-10-10 18:26:56 UTC
Created attachment 142309 [details]
reproduction of the bug

SUMMARY
screenshot preview is too big

STEPS TO REPRODUCE
1. Open Spectacle.
2. Select Area: Rectangular Region.
3. Take a screenshot with one side is much larger than the other. 
4. Drag the image with the mouse.

OBSERVED RESULT

The preview is too big and it can cover the entire screen.

EXPECTED RESULT

Small preview, smaller than the original.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Comment 1 Ilya Bizyaev 2021-10-10 20:57:00 UTC
Can reproduce.

Operating System: openSUSE Leap 15.3
KDE Plasma Version: 5.22.90
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Graphics Platform: X11
Graphics Processor: Mesa DRI Intel® UHD Graphics
Comment 2 Bug Janitor Service 2021-10-24 17:54:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/85
Comment 3 Nate Graham 2021-10-25 19:15:55 UTC
Git commit 6188c743e47761251243a4b1e879e13c24bd0160 by Nate Graham, on behalf of Antonio Prcela.
Committed on 25/10/2021 at 19:13.
Pushed by ngraham into branch 'master'.

Keep screenshot preview within a reasonable size when drag and drop is initiated

When one takes a screenshot with one side (either height or width) being around
five times bigger than the other size and initiating drag and drop, the preview
within the drag becomes comically huge.

M  +1    -1    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/commit/6188c743e47761251243a4b1e879e13c24bd0160