Keep screenshot preview within a reasonable size when drag and drop is initiated

BUG: 443564

When one takes a screenshot with one side (either height or width) being around
five times bigger than the other size and initiating drag and drop, the preview
within the drag becomes comically huge.